# EstructuraDeDatos

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
Stack/: README.md
Stack/C/: main.c  node.c  node.h  stack.c  stack.h
Stack/C/src/: Makefile  main.c  menu.c  menu.h  node.c  stack.c  stack.h
Stack/dynamic/C/src/: main.c
Stack/dynamic/C/src/menu/: menu.c  menu.h
Stack/dynamic/C/src/node/: node.h
Stack/dynamic/C/src/stack/: stack.c  stack.h
Stack/dynamic/ts/: Node.ts  Stack.ts
Stack/static/C/: CMakeLists.txt
Stack/static/C/src/: main.c
Stack/static/C/src/menu/: menu.c  menu.h
Stack/static/C/src/stack/: stack.c  stack.h
Stack/static/ts/: Stack.ts
code/c/: CMakeLists.txt  README.md  get_ready_project.sh  main_linkedlist_simple.c  main_stack_dynamic.c  main_stack_static.c
code/c/LinkedList/: abstractlinkedlist.tpp
code/c/LinkedList/Simple/: linkedlist.c  main.c
code/c/LinkedList/circular/: circularlinkedlist.cpp
code/c/LinkedList/double/: doublelinkedlist.c  doublelinkedlist.h
code/c/Node/: node.c  node.h
code/c/Queue/dynamic/: main.c
code/c/Queue/static/: main.c  queue.c
code/c/Stack/dynamic/: stack.c  stack.h
code/c/Stack/static/: main.c  stack.c  stack.h
code/c/app/: CMakeLists.txt  main_doublelinkedlist.cpp  main_linkedlist.cpp  main_queue_dynamic.c  main_queue_static.c  main_stack_dynamic.c  main_stack_static.c
code/c/structures/: CMakeLists.txt
code/c/structures/linkedlist/: CMakeLists.txt  abstractlinkedlist.h  simple.c  simple.h
code/c/structures/linkedlist/Simple/: linkedlist.h
code/c/structures/linkedlist/circular/: circularlinkedlist.h
code/c/structures/linkedlist/double/: doublelinkedlist.cpp  doublelinkedlist.h
code/c/structures/node/: CMakeLists.txt  node.c  node.h
code/c/structures/queue/: CMakeLists.txt  dynamic.c  dynamic.h  static.c  static.h
code/c/structures/queue/dynamic/: queue.c
code/c/structures/stack/: CMakeLists.txt  dynamic.c  dynamic.h  static.c  static.h
code/c/utils/: CMakeLists.txt  utils.c  utils.h
code/python/LinkedList/Simple/: LinkedList.py  __init__.py  app.py
code/python/LinkedList/base/: LinkedListBase.py  __init__.py
code/python/Node/: __init__.py
code/python/Queue/dynamic/: Queue.py  __init__.py  app.py
code/python/Queue/interface/: QueueInterface.py  __init__.py
code/python/Queue/static/: Queue.py
code/python/Stack/dynamic/: Stack.py  __init__.py  app.py
code/python/Stack/interface/: StackInterface.py  __init__.py
code/python/Stack/static/: Stack.py  app.py
code/python/StructBase/: StructBase.py
code/typescript/LinkedList/Simple/: LinkedList.ts  index.ts
code/typescript/LinkedList/interface/: LinkedListInterface.ts
code/typescript/Queue/dynamic/: Queue.ts  index.ts
code/typescript/Queue/interface/: QueueInterface.ts
code/typescript/Queue/static/: Queue.ts
code/typescript/Stack/dynamic/: Stack.ts  index.ts
code/typescript/Stack/interface/: StackInterface.ts
code/typescript/Stack/static/: Stack.ts  index.ts
code/typescript/StructBase/: StructBase.ts
code/typescript/utils/: utils.ts
docs/: DataStructures.md  README.md  References.md  Stack.md
src-c/: CMakeLists.txt
src-c/Queue/static/: main.c  queue.c  queue.h
src-c/Queue/static/queue/: queue.c  queue.h
src-c/Stack/: CMakeLists.txt
src-c/Stack/dynamic/: CMakeLists.txt  main.c  stack.c  stack.h
src-c/Stack/dynamic/src/: main.c
src-c/Stack/dynamic/src/menu/: menu.c  menu.h
src-c/Stack/dynamic/src/node/: node.h
src-c/Stack/dynamic/src/stack/: stack.c  stack.h
src-c/Stack/static/: README.md  main.c  stack.c  stack.h
src-c/Stack/static/src/: main.c
src-c/Stack/static/src/menu/: menu.c  menu.h
src-c/Stack/static/src/stack/: stack.c  stack.h
src-c/utils/: utils.h
src-c/utils/menu/: menu.c  menu.h
src-c/utils/node/: node.h
src-py/Stack/dynamic/: Stack.py  main.py
src-py/Stack/static/: Stack.py  main.py
src-py/utils/: Node.py
src-ts/Stack/dynamic/: Node.ts  Stack.ts  index.ts
src-ts/Stack/static/: Stack.ts  index.ts
src-ts/utils/: Node.ts
src/LinkedList/SimpleLinkedList/: LinkedList.py  LinkedList.ts  linkedlist.c  linkedlist.h  main.c
src/Node/: Node.py  Node.ts  node.c  node.h
src/Queue/dynamic/: Queue.py  Queue.ts  __main__.py  index.ts  main.c  queue.c  queue.h
src/Queue/static/: Queue.py  Queue.ts  __init__.py  __main__.py  app.py  index.ts  main.c  queue.c  queue.h
src/Stack/dynamic/: Stack.py  Stack.ts  __main__.py  index.ts  main.c  stack.c  stack.h
src/Stack/static/: Stack.py  Stack.ts  __init__.py  __main__.py  app.py  index.ts  main.c  stack.c  stack.h
src/StructBase/: StructBase.py  StructBase.ts  __init__.py
src/utils/: __init__.py  utils.c  utils.h  utils.py  utils.ts
